name:                ansi-megaparsec
version:             0.1.0.0
synopsis:            Parsers for ANSI escape sequences
-- description:         
homepage:            https://github.com/rehno-lindeque/megaparsec-ansi-code
license:             BSD3
license-file:        LICENSE
author:              Rehno Lindeque
maintainer:          rehno.lindeque+code@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.10 && <4.11
  --                   , ansi-terminal >=0.7.1.1
  --                   , attoparsec
  --                   , bytestring
  --                   , containers
  --                   , exceptions
  --                   , free
  --                   , lifted-base
                     , megaparsec >= 7.0
  --                   , monad-control
  --                   , posix-pty
  --                   , process
  --                   , stm
                     , text
  --                   , transformers
  --                   , unix
  --                   , vty
  hs-source-dirs:      src
  exposed-modules:    Text.Megaparsec.ANSI
                    , Text.Megaparsec.ANSI.Lexer
                    , Text.Megaparsec.ANSI.Internal
  default-language:    Haskell2010

test-suite test-ansi-megaparsec
    type:              exitcode-stdio-1.0
    build-depends:     base
                     , ansi-megaparsec
    hs-source-dirs:    test
    main-is:           test.hs
    default-language:  Haskell2010
