name:                ansi-megaparsec
version:             0.1.0.0
synopsis:            Parsers for ANSI escape sequences
-- description:         
homepage:            https://github.com/rehno-lindeque/megaparsec-ansi-code
license:             BSD3
license-file:        LICENSE
author:              Rehno Lindeque
maintainer:          rehno.lindeque+code@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.10 && <4.11
                     , megaparsec >= 7.0
                     , text
  hs-source-dirs:      src
  exposed-modules:    Text.Megaparsec.ANSI
                    , Text.Megaparsec.ANSI.C1.Lexer
                    , Text.Megaparsec.ANSI.Common
                    , Text.Megaparsec.ANSI.Internal
                    , Text.Megaparsec.ANSI.Lexer
  default-language:    Haskell2010

test-suite test-ansi-megaparsec
    type:              exitcode-stdio-1.0
    build-depends:     base
                     -- , ansi-megaparsec
                     , hspec
                     , hspec-megaparsec >= 2.0
                     , megaparsec
    -- hs-source-dirs:    test
    hs-source-dirs:    src, test
    main-is:           Main.hs
    default-language:  Haskell2010
